include(GenerateExportHeader)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_LOCATION})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_LOCATION}/lib/S)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_LOCATION}/lib/S)
foreach(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
  string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG)
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
  set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
endforeach(OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES)

add_subdirectory(./CLI)
add_subdirectory(./CoreCommands)
add_subdirectory(./Debug)
add_subdirectory(./NCurses)
add_subdirectory(./TextInputUpdater)
